package cards;

/**
 * Represents the rank of a playing card.
 */
public enum Rank 
{ 
	ACE, TWO, THREE, FOUR, FIVE, SIX, SEVEN, EIGHT, NINE, TEN, JACK, QUEEN, KING 
}