package model;

/**
 * Places where a visible card can be located, except for the foundation piles
 * and the tableau.
 */
public enum OtherLocation implements Location
{ DISCARD_PILE  }