package model;

/**
 * The different piles of the tableau.
 */
public enum TableauPile implements Location
{ 
	FIRST, SECOND, THIRD, FOURTH, FIFTH, SIXTH, SEVENTH 
}